<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of users -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_item_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="product name"
                android:textColor="@color/colorWhite"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/list_item_price_label"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/list_item_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="00.00"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/list_item_stock_quantity_label"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/list_item_stock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/list_item_supplier_label"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/list_item_supplier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/supplier_general_mills"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/mark_sale_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sale_button_text"
            android:textColor="@color/colorWhite"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>
</LinearLayout>